// Version = 1.0
syntax = "proto3";

package identity.proto;

option java_package = "com.psiphiglobal.identity.proto";
option java_multiple_files = true;

option go_package = "identity";

import "common.proto";

message Organization {
    string domain_name = 1;
    string primary_cert_id = 2;
    repeated SignedCertificate active_certs = 3;
    repeated SignedCertificate expired_certs = 4;
    repeated SignedCertificate blocked_certs = 5;
}

message SignedCertificate {
    string id = 1;
    CertificateStatus status = 2;
    uint64 created_at = 3;
    uint64 expired_at = 4;
    AutoValidationMechanism auto_validation = 5;
    CertificateData data = 6;
    Signature self_sign = 7;
    repeated Signature validations = 8;
}

enum CertificateStatus {
    ACTIVE = 0;
    EXPIRED = 1;
    BLOCKED = 2;
}

enum AutoValidationMechanism {
    UNKNOWN = 0;
    NONE = 1;
    DNS = 2;
}

message CertificateData {
    string domain_name = 1;
    OrganizationDetails org_details = 2;
    PublicKey public_key = 3;
}

message OrganizationDetails {
    string name = 1;
    string email = 2;
    string country = 3;
}